infra/kubernetes/base/cart-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: hb-demo
spec:
  selector:
    app: cart-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
