infra/kubernetes/base/catalog-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: hb-demo
spec:
  selector:
    app: catalog-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
