infra/kubernetes/base/frontend-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: hb-demo
spec:
  selector:
    app: frontend-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
